--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <!-- Fonts
      ================================================== -->
+
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 
     <!-- CSS
@@ -89,7 +90,7 @@
 
             <!-- TOP BAR -->
             <div class="top-bar clearfix">
-                <p>15 años de experiencia. </p>
+                <!-- <p>15 años de experiencia. </p> -->
                 <ul>
                     <li><i class="icon-telephone114"></i> Tel: (55) 5206 2240</li>
                     <li><i class="icon-icons74"></i>Viveros de Coyoacán 64</li>
@@ -100,85 +101,38 @@
 
             <!-- HEADER INNER -->
             <div class="header clearfix">
-
                 <a href="index.html" class="logo"><img src="images/starkend_logo.png" width="209px" alt=""></a>
-
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#primary-nav" aria-expanded="false">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-
-                <!-- <div class="search-btn">
-                    <a href="javascript:void(0);" class="search-trigger"><i class="icon-icons185"></i></a>
-                </div> -->
-
-                <!-- <div class="search-container">
-                    <i class="fa fa-times header-search-close"></i>
-                    <div class="search-overlay"></div>
-                    <div class="search">
-                        <form>
-                            <label>Search:</label>
-                            <input type="text" placeholder="">
-                            <button><i class="fa fa-search"></i></button>
-                        </form>
-                    </div>
-                </div> -->
-
                 <nav class="main-nav navbar-collapse collapse" id="primary-nav">
                     <ul class="nav nav-pills">
                         <li><a href="index.html">Home</a></li>
-                        <!-- <li class="dropdown active"><a href="#.">Home <i class="fa fa-caret-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li class="active"><a href="index.html">Home One</a></li>
-                                <li><a href="index2.html">Home Two</a></li>
-                                <li><a href="index3.html">Home Three</a></li>
-                            </ul>
-                        </li> -->
+
                         <li><a href="about-us.html">Nosotros</a></li>
                         <li class="dropdown"><a href="#.">Marcas <i class="fa fa-caret-down"></i></a>
                             <ul class="dropdown-menu">
-                                <!-- <li><a href="services.html">Financial Planning</a></li>
-                                <li><a href="services.html">Bonds</a></li>
-                                <li><a href="services.html">Commodities</a></li>
-                                <li><a href="services.html">Investment Trusts</a></li> -->
-                                <li class="dropdown-submenu"><a href="#.">Ovvo <i class="fa fa-caret-right"></i></a>
+
+                                <li class="dropdown-submenu"><a href="#.">OVVO <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="services.html">Productos</a></li>
+                                        <li><a href="https://ovvotech.com/product/#Drilling">Productos</a></li>
                                         <li><a href="services.html">Videos</a></li>
                                         <li><a href="services.html">Premiaciones</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown-submenu"><a href="#.">LockDowel <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="#.">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="services.html">Productos</a></li>
-                                        <!-- <li><a href="services.html">Videos</a></li>
-                                        <li><a href="services.html">Premiaciones</a></li> -->
                                     </ul>
                                 </li>
-                                <!-- <li><a href="services.html">Retirement</a></li>
-                                <li><a href="services.html">Trades</a></li> -->
                             </ul>
                         </li>
-                        <!-- <li><a href="cases.html">Cases</a></li> -->
-                        <!-- <li class="dropdown"><a href="#.">News <i class="fa fa-caret-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="news.html">News One</a></li>
-                                <li><a href="news2.html">News Two</a></li>
-                            </ul>
-                        </li> -->
-                        <!-- <li><a href="shop.html">Shop</a></li> -->
                         <li><a href="contact-us.html">Contacto</a></li>
-                        <!-- <li class="dropdown"><a href="#.">Contact Us <i class="fa fa-caret-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="contact-us.html">Contact Us One</a></li>
-                                <li><a href="contact-us2.html">Contact Us Two</a></li>
-                            </ul>
-                        </li> -->
                     </ul>
                 </nav>
-
             </div>
             <!-- / HEADER INNER -->
 
@@ -200,7 +154,7 @@
             <li class="selected">
                 <div class="cd-full-width">
                     <div class="container">
-                        <h2>Nos interesan<br>tus <span class="color-default">Opiniones</span></h2>
+                        <h2>Nos interesan<br>tus opiniones<span class="color-default"></span></h2>
                         <p>Ofrecemos distribución de producos en toda la republica</p>
                         <a href="about-us.html" class="btn btn-primary" data-text="Leer más">Leer más</a>
                         <a href="contact-us.html" class="btn btn-default" data-text="Contactanos">Contactanos</a>
@@ -211,9 +165,9 @@
             <li>
                 <div class="cd-full-width">
                     <div class="container">
-                        <h2>Friendly <span class="color-default">Assistance</span></h2>
-                        <p>With over 15 years of experience we’ll ensure you always get the best<br>guidance. we’re with you every step of the way</p>
-                        <a href="contact-us.html" class="btn btn-default" data-text="contact us today">contact us today</a>
+                        <h2>Experiencia<span class="color-default"> amigable</span></h2>
+                        <p>Manejamos los productos de las marcas OVVO y LOCKDOWEL</p>
+                        <a href="contact-us.html" class="btn btn-default" data-text="contactanos">contactanos<i class="fas fa-badger-honey"></i></a>
                     </div>
                 </div>
             </li>
@@ -221,10 +175,10 @@
             <li>
                 <div class="cd-full-width">
                     <div class="container text-center">
-                        <h2 class="color-white">Experience is Everything</h2>
-                        <p class="color-white">With over 15 years of experience we’ll ensure you always get the best<br>guidance we’re with you every step of the way</p>
-                        <a href="about-us.html" class="btn btn-primary" data-text="read more">read more</a>
-                        <a href="contact-us.html" class="btn btn-default" data-text="Contact Us">Contact Us</a>
+                        <h2 class="color-white">La experiencia es todo</h2>
+                        <p class="color-white">Con más de 15 años de experiencia, nos aseguraremos de que siempre obtenga lo mejor <br> y estamos con usted en cada paso del camino</p>
+                        <a href="about-us.html" class="btn btn-primary" data-text="leer más">leer más</a>
+                        <!-- <a href="contact-us.html" class="btn btn-default" data-text="Contact Us">Contact Us</a> -->
                     </div>
                 </div>
             </li>
@@ -232,9 +186,9 @@
             <li>
                 <div class="cd-full-width">
                     <div class="container text-right">
-                        <h2>Clients <span class="color-default">Investment<br></span>Guidance</h2>
-                        <p>Doing the right thing for our clients, no matter what.</p>
-                        <a href="services.html" class="btn btn-primary" data-text="view our all services">view our all services</a>
+                        <h2><span class="color-default">Nuestros<br></span>Clientes</h2>
+                        <p>Agradecemos su preferencia</p>
+                        <a href="services.html" class="btn btn-primary" data-text="Productos">Productos</a>
                     </div>
                 </div>
             </li>
@@ -252,7 +206,7 @@
                     </li>
                     <li>
                         <a href="#0">
-                            <div class="slide-number">2</div> Experiencia amigable<span>Compra de productos</span></a>
+                            <div class="slide-number">2</div> Experiencia amigable<span>Productos OVVO y LOCKDOWEL</span></a>
                     </li>
                     <li>
                         <a href="#0">
@@ -281,7 +235,7 @@
                     <div class="height-10"></div>
                     <p>Tenemos 15 años de experiencia en ditribución y manejo de productos relacionados con la construcción de stands muebles de exibición y mucho más. </p>
                     <div class="height-10"></div>
-                    <p>te ofremos productos de la marca Ovvo y LockDowel.</p>
+                    <p>te ofremos productos de la marca OVVO y LOCKDOWEL.</p>
                     <div class="height-20"></div>
                     <a href="about-us.html" class="btn btn-bordered-dark" data-text="leer más">leer más</a>
                     <div class="height-40"></div>
@@ -349,9 +303,9 @@
                         <p>Tambien pudes contactarnos en.</p>
 
                         <ul class="social">
-                            <li class="animate bounceIn"><a href="#." class="facebook"><i class="icon-facebook-1"></i></a></li>
+                            <li class="animate bounceIn"><a href="https://www.facebook.com/StarkendMx/" class="facebook"><i class="icon-facebook-1"></i></a></li>
                             <li class="animate bounceIn" data-delay="100"><a href="#." class="twitter"><i class="icon-twitter-1"></i></a></li>
-                            <li class="animate bounceIn" data-delay="200"><a href="#." class="google-plus"><i class="icon-google"></i></a></li>
+                            <li class="animate bounceIn" data-delay="200"><a href="hector.pichardo@ideasg.com" class="google-plus"><i class="icon-google"></i></a></li>
                             <!-- <li class="animate bounceIn" data-delay="300"><a href="#." class="linkedin"><i class="icon-linkedin3"></i></a></li> -->
                         </ul>
                     </div>
