--- a/about-us.html
+++ b/about-us.html
@@ -138,13 +138,13 @@
     <section class="subpage-header">
         <div class="container">
             <div class="site-title clearfix">
-                <h2>About Us</h2>
+                <h2>Nosotros</h2>
                 <ul class="breadcrumbs">
-                    <li><a href="#.">Home</a></li>
-                    <li>About Us</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li>Nosotros</li>
                 </ul>
             </div>
-            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contact us"><i class="icon-telephone114"></i>Contact us</a>
+            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contactanos"><i class="icon-telephone114"></i>Contactanos</a>
         </div>
     </section>
 
@@ -215,8 +215,8 @@
     <section>
         <div class="container">
             <div class="heading margin-bottom-50 animate bounceIn">
-                <h2>Our Partners</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor exercitationemut labore.</p>
+                <h2>Nuestros Socios</h2>
+                <p>El respaldo de nuestros socios es muy importante.</p>
             </div>
             <div class="two-items-carousel owl-carousel">
                 <div class="partner animate fadeInLeft">
