--- a/contact-us.html
+++ b/contact-us.html
@@ -134,13 +134,13 @@
     <section class="subpage-header">
         <div class="container">
             <div class="site-title clearfix">
-                <h2>Contact Us</h2>
+                <h2>Contactanos</h2>
                 <ul class="breadcrumbs">
-                    <li><a href="#.">Home</a></li>
-                    <li>Contact Us</li>
+                    <li><a href="contact-us.html">Home</a></li>
+                    <li>Contactanos</li>
                 </ul>
             </div>
-            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contact us"><i class="icon-telephone114"></i>Contact us</a>
+            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contactanos"><i class="icon-telephone114"></i>Contactanos</a>
         </div>
     </section>
 
