--- a/index.html
+++ b/index.html
@@ -116,16 +116,19 @@
                         <li class="dropdown"><a href="#.">Marcas <i class="fa fa-caret-down"></i></a>
                             <ul class="dropdown-menu">
 
-                                <li class="dropdown-submenu"><a href="#.">OVVO <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="https://ovvotech.com">OVVO <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="https://ovvotech.com/product/#Drilling">Productos</a></li>
-                                        <li><a href="services.html">Videos</a></li>
-                                        <li><a href="services.html">Premiaciones</a></li>
+                                        <!-- <li><a href="https://ovvotech.com/videos/">Videos</a></li>
+                                        <li><a href="https://ovvotech.com/awards/">Premiaciones</a></li> -->
                                     </ul>
                                 </li>
-                                <li class="dropdown-submenu"><a href="#.">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="https://lockdowel.com/">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="services.html">Productos</a></li>
+                                        <!-- <li><a href="services.html">Productos</a></li> -->
+                                        <li><a href="https://lockdowel.com/">Productos</a></li>
+                                        <!-- <li><a href="services.html">Productos</a></li>
+                                        <li><a href="services.html">Productos</a></li> -->
                                     </ul>
                                 </li>
                             </ul>
