tercer commit contacto

--- a/about-us.html
+++ b/about-us.html
@@ -110,14 +110,15 @@
 
                                 <li class="dropdown-submenu"><a href="#.">Ovvo <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="services.html">Productos</a></li>
-                                        <li><a href="services.html">Videos</a></li>
-                                        <li><a href="services.html">Premiaciones</a></li>
+                                        <li><a href="https://ovvotech.com">Productos</a></li>
+                                        <!-- <li><a href="services.html">Videos</a></li>
+                                        <li><a href="services.html">Premiaciones</a></li> -->
                                     </ul>
                                 </li>
                                 <li class="dropdown-submenu"><a href="#.">LockDowel <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="services.html">Productos</a></li>
+                                        <li>
+                                            <a href="https://lockdowel.com/">Productos</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -136,7 +137,7 @@
 
 
     <section class="subpage-header">
-        <div class="container">
+        <div class="container ">
             <div class="site-title clearfix">
                 <h2>Nosotros</h2>
                 <ul class="breadcrumbs">
@@ -154,11 +155,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 animate fadeInLeft">
-                    <h2>Company overview</h2>
+                    <h2>Starkend S.A. de C.V. </h2>
                     <div class="height-10"></div>
-                    <p>We have over 15 years of experience Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean Lorem ipsm dolor sit the power of consectetur adi pisi cing elit, sed do eiusmod tempor xercitationemut labore. Lorem ipsum dolor sit
-                        amet, consectetur adipiscing elit. Aenean bibendum nec risus et suscipit Curabitur metus ipsum. But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete
-                        account of the system.</p>
+                    <p>Tenemos 15 años de experiencia en ditribución y manejo de productos relacionados con la construcción de stands muebles de exibición y mucho más.</p>
                 </div>
                 <div class="col-md-6 animate fadeInRight">
                     <div class="image-widget">
@@ -176,30 +175,32 @@
     <section class="bg-blue">
         <div class="container">
             <div class="heading margin-bottom-50 animate bounceIn">
-                <h2>Company History</h2>
-                <p>it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself.</p>
+                <h2>Historia de la Compañía</h2>
+                <p>Starkend inició sus actividades en 2004 por lo cual ya cuenta con más de 15 años de presencia y trayectoria en el mercado.</p>
+                <p>Desde el comienzo de nuestras actividades, nos especializamos en el suministro de productos y equipos relacionados a la construcción y mantenimiento de stands, mostradores, muebles y mucho mas. Participamos en los principales proyectos
+                    y exibiciones de muchos de nuestros clientes.</p>
             </div>
             <ul class="company-history">
                 <li class="clearfix animate fadeInLeft">
-                    <span class="year">1999</span>
+                    <span class="year ">2007</span>
                     <div class="history-content">
-                        <h4>start with a small Business</h4>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout The point of using Lorem Ipsum.</p>
+                        <h4>Comenzar con una pequeña empresa</h4>
+                        <p>Con el transcurso de los años hemos incorporado nuevas líneas de productos con el objetivo de proveer a nuestros clientes una solución integral a sus necesidades</p>
                     </div>
                 </li>
                 <li class="clearfix animate fadeInLeft" data-delay="100">
-                    <span class="year">2005</span>
+                    <span class="year">2010</span>
                     <div class="history-content">
-                        <h4>First Recognition</h4>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout The point of using Lorem Ipsum.</p>
+                        <h4>Primer reconocimiento</h4>
+                        <p>Nuestro objetivo principal es lograr una permanente mejora en nuestras actividades a fin de dar un servicio que asegure una entrega en tiempo y forma con su correspondiente asesoramiento, soporte técnico y su posterior servicio
+                            post-venta. La cumplimentación de las pautas mencionadas nos obligan a un estricto cumplimiento de nuestro manual de garantía de calidad y procedimientos a fin de lograr como meta final una satisfacción plena de nuestros clientes.</p>
                     </div>
                 </li>
                 <li class="clearfix animate fadeInLeft" data-delay="200">
-                    <span class="year">2016</span>
+                    <span class="year">2019</span>
                     <div class="history-content">
-                        <h4>World Most Popular Firm</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor exercitationemut labore. Curabitur metus ipsum. But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
-                            born and I will give you a complete account of the system.</p>
+                        <h4>Empresa más popular del mundo</h4>
+                        <p>Es importante señalar además, que nuestros servicios están fortalecidos por contar con un stock permanente de los principales productos de nuestra comercialización.</p>
                     </div>
                 </li>
             </ul>
@@ -220,45 +221,45 @@
             </div>
             <div class="two-items-carousel owl-carousel">
                 <div class="partner animate fadeInLeft">
-                    <img src="images/partners/1.jpg" alt="">
+                    <img src="images/partners/3.jpg" width="100px" alt="">
                     <div class="partner-content">
-                        <h4>Adup Media LLC<span>Athletic Performance</span></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor.</p>
+                        <h4>OVVO<span>The Future of Connection</span></h4>
+
                     </div>
                 </div>
                 <div class="partner animate fadeInRight">
-                    <img src="images/partners/2.jpg" alt="">
+                    <img src="images/partners/4.jpg" width="200px" alt="">
                     <div class="partner-content">
-                        <h4>Primo Software<span>Software Development</span></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor.</p>
+                        <h4>LockDowel<span>Nuestro kit de evaluación es el primer paso hacia un futuro más rentable.</span></h4>
+
                     </div>
                 </div>
                 <div class="partner">
-                    <img src="images/partners/1.jpg" alt="">
-                    <div class="partner-content">
-                        <h4>Adup Media LLC<span>Athletic Performance</span></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor.</p>
+                    <img src="images/partners/3.jpg" width="100px" alt="">
+                    <div class="partner-content ">
+                        <h4>OVVO<span>The Future of Connection</span></h4>
+
                     </div>
                 </div>
                 <div class="partner">
-                    <img src="images/partners/2.jpg" alt="">
-                    <div class="partner-content">
-                        <h4>Primo Software<span>Software Development</span></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor.</p>
+                    <img src="images/partners/4.jpg" width="200px" alt="">
+                    <div class="partner-content ">
+                        <h4>LockDowel<span>Nuestro kit de evaluación es el primer paso hacia un futuro más rentable.</span></h4>
+
                     </div>
                 </div>
                 <div class="partner">
-                    <img src="images/partners/1.jpg" alt="">
-                    <div class="partner-content">
-                        <h4>Adup Media LLC<span>Athletic Performance</span></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor.</p>
+                    <img src="images/partners/3.jpg" width="100px" alt="">
+                    <div class="partner-content ">
+                        <h4>OVVO<span>The Future of Connection</span></h4>
+
                     </div>
                 </div>
                 <div class="partner">
-                    <img src="images/partners/2.jpg" alt="">
+                    <img src="images/partners/4.jpg" width="200px" alt="">
                     <div class="partner-content">
-                        <h4>Primo Software<span>Software Development</span></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor.</p>
+                        <h4>LockDowel<span>Nuestro kit de evaluación es el primer paso hacia un futuro más rentable.</span></h4>
+
                     </div>
                 </div>
             </div>
@@ -266,12 +267,22 @@
     </section>
     <!-- / OUR PARTNERS -->
 
-
-
-
     <footer id="footer">
         <div class="container">
             <div class="footer-top clearfix">
+
+                <!-- <div class="row">
+                    <div class="col-md-3 col-sm-3">
+                        <div class="footer-logo animate fadeInLeft">
+                            <a href="index.html"><img src="images/starkend_logo.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="col-md-9 col-sm-9">
+                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipis civelit sed quia non qui dolorem or phone +11 987 654 3210 ipsum
+                            quia dolor sit amet, consectetur.</p>
+                    </div>
+                </div> -->
+
                 <div class="height-50"></div>
 
                 <div class="footer-left">
@@ -289,9 +300,10 @@
                         <p>Tambien pudes contactarnos en.</p>
 
                         <ul class="social">
-                            <li class="animate bounceIn"><a href="#." class="facebook"><i class="icon-facebook-1"></i></a></li>
+                            <li class="animate bounceIn"><a href="https://www.facebook.com/StarkendMx/" class="facebook"><i class="icon-facebook-1"></i></a></li>
                             <li class="animate bounceIn" data-delay="100"><a href="#." class="twitter"><i class="icon-twitter-1"></i></a></li>
-                            <li class="animate bounceIn" data-delay="200"><a href="#." class="google-plus"><i class="icon-google"></i></a></li>
+                            <li class="animate bounceIn" data-delay="200"><a href="hector.pichardo@ideasg.com" class="google-plus"><i class="icon-google"></i></a></li>
+                            <!-- <li class="animate bounceIn" data-delay="300"><a href="#." class="linkedin"><i class="icon-linkedin3"></i></a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -314,6 +326,8 @@
 
 
 
+
+
     <!-- FOOTER SCRIPTS
 		================================================== -->
     <script src="js/jquery-2.2.0.js"></script>
@@ -324,8 +338,8 @@
     <script src="js/scripts.js"></script>
 
     <!-- DEMO -->
-    <!--<script src="demo-files/js/jquery.cookie.js"></script>-->
-    <!--<script src="demo-files/js/switcher.js"></script>-->
+    <!--<script src="demo-files/js/jquery.cookie.js "></script>-->
+    <!--<script src="demo-files/js/switcher.js "></script>-->
 
 </body>
 
