--- a/contact-us.html
+++ b/contact-us.html
@@ -81,14 +81,19 @@
     <header id="header" class="h-one-h">
 
         <div class="container">
+
+            <!-- TOP BAR -->
             <div class="top-bar clearfix">
+                <!-- <p>15 años de experiencia. </p> -->
                 <ul>
                     <li><i class="icon-telephone114"></i> Tel: (55) 5206 2240</li>
                     <li><i class="icon-icons74"></i>Viveros de Coyoacán 64</li>
                     <li><i class="icon-icons20"></i> Lun a Sab 08:00 - 16:30</li>
                 </ul>
             </div>
+            <!-- / TOP BAR -->
 
+            <!-- HEADER INNER -->
             <div class="header clearfix">
                 <a href="index.html" class="logo"><img src="images/starkend_logo.png" width="209px" alt=""></a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#primary-nav" aria-expanded="false">
@@ -105,16 +110,19 @@
                         <li class="dropdown"><a href="#.">Marcas <i class="fa fa-caret-down"></i></a>
                             <ul class="dropdown-menu">
 
-                                <li class="dropdown-submenu"><a href="#.">Ovvo <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="https://ovvotech.com">OVVO <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="services.html">Productos</a></li>
-                                        <li><a href="services.html">Videos</a></li>
-                                        <li><a href="services.html">Premiaciones</a></li>
+                                        <li><a href="https://ovvotech.com/product/#Drilling">Productos</a></li>
+                                        <!-- <li><a href="https://ovvotech.com/videos/">Videos</a></li>
+                                        <li><a href="https://ovvotech.com/awards/">Premiaciones</a></li> -->
                                     </ul>
                                 </li>
-                                <li class="dropdown-submenu"><a href="#.">LockDowel <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="https://lockdowel.com/">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="services.html">Productos</a></li>
+                                        <!-- <li><a href="services.html">Productos</a></li> -->
+                                        <li><a href="https://lockdowel.com/">Productos</a></li>
+                                        <!-- <li><a href="services.html">Productos</a></li>
+                                        <li><a href="services.html">Productos</a></li> -->
                                     </ul>
                                 </li>
                             </ul>
@@ -123,12 +131,13 @@
                     </ul>
                 </nav>
             </div>
+            <!-- / HEADER INNER -->
+
         </div>
+        <!-- / CONTAINER -->
 
     </header>
     <!-- / HERDER -->
-
-
 
 
     <section class="subpage-header">
@@ -136,7 +145,7 @@
             <div class="site-title clearfix">
                 <h2>Contactanos</h2>
                 <ul class="breadcrumbs">
-                    <li><a href="contact-us.html">Home</a></li>
+                    <li><a href="#.">Home</a></li>
                     <li>Contactanos</li>
                 </ul>
             </div>
@@ -150,7 +159,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-sm-6 animate fadeInLeft">
+                <!-- <div class="col-md-6 col-sm-6 animate fadeInLeft">
                     <h3>Sales Queries</h3>
                     <div class="row">
                         <div class="col-md-4 col-sm-4">
@@ -168,10 +177,10 @@
                         <li class="animate bounceIn"><a href="#." class="facebook"><i class="icon-facebook-1"></i></a></li>
                         <li class="animate bounceIn" data-delay="100"><a href="#." class="twitter"><i class="icon-twitter-1"></i></a></li>
                         <li class="animate bounceIn" data-delay="200"><a href="#." class="google-plus"><i class="icon-google"></i></a></li>
-                        <!-- <li class="animate bounceIn" data-delay="300"><a href="#." class="linkedin"><i class="icon-linkedin3"></i></a></li> -->
+                        <li class="animate bounceIn" data-delay="300"><a href="#." class="linkedin"><i class="icon-linkedin3"></i></a></li>
                     </ul>
                     <div class="height-50"></div>
-                </div>
+                </div> -->
 
                 <div class="form">
                     <div class="col-md-6 col-sm-6 animate fadeInRight">
@@ -182,19 +191,19 @@
                         <form class="contact-form" name="contact_form" id="contact_form" method="post" action="#" onSubmit="return false">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <input type="text" data-delay="300" placeholder="Your full name" name="contact_name" id="contact_name" class="input">
+                                    <input type="text" data-delay="300" placeholder="Nombre" name="contact_name" id="contact_name" class="input">
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="text" data-delay="300" placeholder="E-mail Address" name="contact_email" id="contact_email" class="input">
+                                    <input type="text" data-delay="300" placeholder="Email" name="contact_email" id="contact_email" class="input">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <input type="text" data-delay="300" placeholder="Phone No" name="contact_phone" id="contact_phone" class="input">
+                                    <input type="text" data-delay="300" placeholder="Teléfono" name="contact_phone" id="contact_phone" class="input">
                                 </div>
                             </div>
-                            <textarea data-delay="500" class="required valid" placeholder="Message" name="message" id="message"></textarea>
-                            <button class="btn btn-primary" name="" type="submit" data-text="Send Message" onClick="validateContact();">Send Message</button>
+                            <textarea data-delay="500" class="required valid" placeholder="Mensaje" name="message" id="message"></textarea>
+                            <button class="btn btn-primary" name="" type="submit" data-text="Contactanos" onClick="validateContact();">Contactanos</button>
                         </form>
 
 
@@ -211,9 +220,23 @@
 
     <div class="map" id="map"></div>
 
+
     <footer id="footer">
         <div class="container">
             <div class="footer-top clearfix">
+
+                <!-- <div class="row">
+                    <div class="col-md-3 col-sm-3">
+                        <div class="footer-logo animate fadeInLeft">
+                            <a href="index.html"><img src="images/starkend_logo.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="col-md-9 col-sm-9">
+                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipis civelit sed quia non qui dolorem or phone +11 987 654 3210 ipsum
+                            quia dolor sit amet, consectetur.</p>
+                    </div>
+                </div> -->
+
                 <div class="height-50"></div>
 
                 <div class="footer-left">
@@ -233,7 +256,8 @@
                         <ul class="social">
                             <li class="animate bounceIn"><a href="https://www.facebook.com/StarkendMx/" class="facebook"><i class="icon-facebook-1"></i></a></li>
                             <li class="animate bounceIn" data-delay="100"><a href="#." class="twitter"><i class="icon-twitter-1"></i></a></li>
-                            <li class="animate bounceIn" data-delay="200"><a href="#." class="google-plus"><i class="icon-google"></i></a></li>
+                            <li class="animate bounceIn" data-delay="200"><a href="hector.pichardo@ideasg.com" class="google-plus"><i class="icon-google"></i></a></li>
+                            <!-- <li class="animate bounceIn" data-delay="300"><a href="#." class="linkedin"><i class="icon-linkedin3"></i></a></li> -->
                         </ul>
                     </div>
                 </div>
