--- a/contact-us.html
+++ b/contact-us.html
@@ -60,6 +60,7 @@
     
     ================================================== -->
     <script src="js/modernizr.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
 
 </head>
@@ -288,6 +289,7 @@
     <script src="js/counter.js"></script>
     <script src="js/common.js"></script>
     <script src="js/scripts.js"></script>
+
 
     <!-- Map (include map api only once)
 		============================================= -->
