--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <div class="container text-right">
                         <h2><span class="color-default">Nuestros<br></span>Clientes</h2>
                         <p>Agradecemos su preferencia</p>
-                        <a href="services.html" class="btn btn-primary" data-text="Productos">Productos</a>
+                        <a href="#." class="btn btn-primary" data-text="Productos">Productos</a>
                     </div>
                 </div>
             </li>
